FileRepository: keep deterministic name ordering under immutability
Set.of/Set.copyOf are hash-ordered (randomized per JVM run); an
unmodifiable view over a LinkedHashSet, created once at cache-build
time, is the only stdlib form that is both insertion-ordered and
immutable, and the getter still hands it out allocation-free.

Claude-Session: https://claude.ai/code/session_01PYuabbmCJcPk2kz8rcLjAR